--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <input type="search" placeholder="Search...">
     <p></p>
     <h3>Shoutout to!:</h3>
-    <a href="https://www.youtube.com/@Kenzerrio_">Kenzerrio</a>
+    <a href="https://www.youtube.com/@kenzzerrio_">Kenzzerrio</a>
     <p></p>
     <a href="https://www.youtube.com/@J8gho">J8gho (Myself)</a>
     <p></p>
